--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Parallelism by HTML5 UP</title>
+		<title>BMK LTD</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,9 +24,9 @@
 							<div class="items">
 
 								<div class="item intro span-2">
-									<h1>Parallelism</h1>
-									<p>A responsive portfolio site<br />
-									template by HTML5 UP</p>
+									<h1>[BMK LTD]</h1>
+									<p>A people business<br />
+									...with a human touch</p>
 								</div>
 
 								<article class="item thumb span-1">
@@ -90,20 +90,24 @@
 
 				<!-- Footer -->
 					<section id="footer">
-						<section>
+						<!--<section>
 							<p>This is <strong>Parallelism</strong>, a responsive portfolio site template by <a href="http://html5up.net">HTML5 UP</a>. Free for personal
 							and commercial use under the <a href="http://html5up.net/license">Creative Commons Attribution</a> license.</p>
-						</section>
+						</section>-->
 						<section>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="#" class="icon solid fa-linkedin"><span class="label">Email</span></a></li>
+								<!--
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								-->
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Copyright &copy;<a href="ransoo.co.uk"> BMK LTD 2021</li>
+								<!--<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>-->
 							</ul>
 						</section>
 					</section>
