Added link to home pages and linkedin icon

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<div class="items">
 
 								<div class="item intro span-2">
-									<h1>[BMK LTD]</h1>
+									<h1><a href="ransoo.co.uk"> BMK LTD 2021</a>[BMK LTD]</h1>
 									<p>A people business<br />
 									...with a human touch</p>
 								</div>
@@ -99,14 +99,14 @@
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								<li><a href="#" class="icon solid fa-linkedin"><span class="label">Email</span></a></li>
+								<li><a href="#" class="icon brands fa-linkedin"><span class="label">Email</span></a></li>
 								<!--
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								-->
 							</ul>
 							<ul class="copyright">
-								<li>Copyright &copy;<a href="ransoo.co.uk"> BMK LTD 2021</li>
+								<li>Copyright &copy;<a href="ransoo.co.uk"> BMK LTD 2021</a></li>
 								<!--<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>-->
 							</ul>
 						</section>
