--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<div class="items">
 
 								<div class="item intro span-2">
-									<h1><a href="ransoo.co.uk"> BMK LTD 2021</a>[BMK LTD]</h1>
+									<h1><a href="ransoo.co.uk">[BMK LTD]</a></h1>
 									<p>A people business<br />
 									...with a human touch</p>
 								</div>
@@ -99,7 +99,7 @@
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin"><span class="label">Email</span></a></li>
+								<li><a href="#" class="icon brands fa-linkedin"><span class="label">linkedin</span></a href="https://www.linkedin.com/in/ransoo/"></li>
 								<!--
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
