--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<div class="items">
 
 								<div class="item intro span-2">
-									<h1><a href="ransoo.co.uk">[BMK LTD]</a></h1>
+									<h1><a href="http://ransoo.co.uk">[BMK LTD]</a></h1>
 									<p>A people business<br />
 									...with a human touch</p>
 								</div>
@@ -106,7 +106,7 @@
 								-->
 							</ul>
 							<ul class="copyright">
-								<li>Copyright &copy;<a href="ransoo.co.uk"> BMK LTD 2021</a></li>
+								<li>Copyright &copy;<a href="http://ransoo.co.uk"> BMK LTD 2021</a></li>
 								<!--<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>-->
 							</ul>
 						</section>
