--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<div class="items">
 
 								<div class="item intro span-2">
-									<h1><a href="http://ransoo.co.uk">[BMK LTD]</a></h1>
+									<h1>[BMK LTD]</h1>
 									<p>A people business<br />
 									...with a human touch</p>
 								</div>
@@ -90,16 +90,16 @@
 
 				<!-- Footer -->
 					<section id="footer">
-						<!--<section>
+						<section>
 							<p>This is <strong>Parallelism</strong>, a responsive portfolio site template by <a href="http://html5up.net">HTML5 UP</a>. Free for personal
 							and commercial use under the <a href="http://html5up.net/license">Creative Commons Attribution</a> license.</p>
-						</section>-->
+						</section>
 						<section>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin"><span class="label">linkedin</span></a href="https://www.linkedin.com/in/ransoo/"></li>
+								<li><a href="#" class="icon brands fa-linkedin"><span class="label">linkedin</span></li>
 								<!--
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
