--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 <html>
 	<head>
 		<title>BMK LTD</title>
-		<link rel= "shortcut icon" type="image/x-icon" href="/images/bg3.ico"/>
+		<!--Favicon-->
+		<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+		<link rel="manifest" href="images/favicon/site.webmanifest">
+		<!--Favicon-->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
