Hiding dummy images

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 						<!-- Items -->
 							<div class="items">
 
+								<!--
 								<article class="item thumb span-3"><h2>Kingdom of the Wind</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
 								<article class="item thumb span-1"><h2>The Pursuit</h2><a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a></article>
 								<article class="item thumb span-2"><h2>Boundless</h2><a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a></article>
@@ -88,19 +89,19 @@
 								<article class="item thumb span-2"><h2>Ad Infinitum</h2><a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a></article>
 								<article class="item thumb span-1"><h2>Different.</h2><a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a></article>
 								<article class="item thumb span-2"><h2>Kingdom of the Wind</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>Elysium</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>Elysium</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>-->
 
 								<!--BMK portfolio -->
-								<article class="item thumb span-1"><h2>Brittany Ferries</h2><a href="images/fulls/BFLOGO.png" class="image"><img src="images/thumbs/BFLOGO.png" alt=""></a></article>
+								<article class="item thumb span-3"><h2>Brittany Ferries</h2><a href="images/fulls/BFLOGO.png" class="image"><img src="images/thumbs/BFLOGO.png" alt=""></a></article>
 								<article class="item thumb span-1"><h2>British Medical Association</h2><a href="images/fulls/BMA.png" class="image"><img src="images/thumbs/BMA.png" alt=""></a></article>
-								<article class="item thumb span-1"><h2>Carphone Warehouse - Currys</h2><a href="images/fulls/CPW-CURRYS.png" class="image"><img src="images/thumbs/CPW-CURRYS.png" alt=""></a></article>
-								<article class="item thumb span-1"><h2>DEFRA</h2><a href="images/fulls/DEFRA.png" class="image"><img src="images/thumbs/DEFRA.png" alt=""></a></article>
+								<article class="item thumb span-2"><h2>Carphone Warehouse - Currys</h2><a href="images/fulls/CPW-CURRYS.png" class="image"><img src="images/thumbs/CPW-CURRYS.png" alt=""></a></article>
+								<article class="item thumb span-2"><h2>DEFRA</h2><a href="images/fulls/DEFRA.png" class="image"><img src="images/thumbs/DEFRA.png" alt=""></a></article>
 								<article class="item thumb span-1"><h2>French Customs</h2><a href="images/fulls/DOUANES-FR.png" class="image"><img src="images/thumbs/DOUANES-FR.png" alt=""></a></article>
-								<article class="item thumb span-1"><h2>General Medical Council</h2><a href="images/fulls/GMC.png" class="image"><img src="images/thumbs/GMC.png" alt=""></a></article>
-								<article class="item thumb span-1"><h2>NHS Health Education England</h2><a href="images/fulls/HEE.jpg" class="image"><img src="images/thumbs/HEE.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>HMRC</h2><a href="images/fulls/HMRC.jpg" class="image"><img src="images/thumbs/HMRC.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>General Medical Council</h2><a href="images/fulls/GMC.png" class="image"><img src="images/thumbs/GMC.png" alt=""></a></article>
+								<article class="item thumb span-2"><h2>NHS Health Education England</h2><a href="images/fulls/HEE.jpg" class="image"><img src="images/thumbs/HEE.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>HMRC</h2><a href="images/fulls/HMRC.jpg" class="image"><img src="images/thumbs/HMRC.jpg" alt=""></a></article>
 								<article class="item thumb span-1"><h2>Juniper</h2><a href="images/fulls/JUNIPER.jpg" class="image"><img src="images/thumbs/JUNIPER.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>NHS Business Services Authority</h2><a href="images/fulls/NHSBSA.jpg" class="image"><img src="images/thumbs/NHSBSA.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>NHS Business Services Authority</h2><a href="images/fulls/NHSBSA.jpg" class="image"><img src="images/thumbs/NHSBSA.jpg" alt=""></a></article>
 
 							</div>
 
